# flask-apcore

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/flask-apcore/: prd.md  tech-design.md
docs/plans/: 2026-02-23-redesign-implementation.md
examples/demo/: .env.example  README.md  app.py  docker-compose.yml  entrypoint.sh
src/flask_apcore/: __init__.py  cli.py  config.py  extension.py  observability.py  serializers.py
src/flask_apcore/output/: __init__.py  registry_writer.py  yaml_writer.py
src/flask_apcore/scanners/: base.py  native.py
tests/: test_cli_serve.py  test_config.py  test_context.py  test_extension.py  test_integration.py  test_observability.py  test_public_api.py  test_registry_writer.py  test_yaml_writer.py
